# MatrixGameSolver

./: .gitignore  CMakeLists.txt  README.md
include/: MatrixGame.hpp  tools.hpp
sources/: MatrixGame.cpp  main.cpp  tools.cpp
